# drm_tool

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindLibDrm.cmake
src/: drm_tool.c
